[package]
name = "spwf"
version = "0.0.1"
edition = "2021"
authors = ["hzqd <hzqelf@yeah.net>"]
description = "Simple personal website framework"
repository = "https://github.com/hzqd/spwf"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.24"
features = ["full"]

[dependencies.aoko]
version = "0.3.0-alpha.24"
features = ["async"]

[dependencies]